src/test/deca/syntax/valid/provided/cast.deca
{
int x=8;
float y;
y=(float)x;
}