src/test/deca/syntax/invalid/int_trop_long.deca
{
int x = 120788490378094289;
}